--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,25 @@
 <html>
   <head>
     <title>Boilerplate</title>
-    <link rel="stylesheet" href="fsdfsadf" type="text/css">
+    <link rel="stylesheet" href="../node_modules/bulma/css/bulma.min.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
-    
+    <section class="hero">     
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Welcome
+          </h1>
+          <h2 class="subtitle">
+            to the generic app boilerplate
+          </h2>
+        </div>
+      </div>
+    </section>
 
-    <script src="fsdfs" type="text/javascript"></script>
+    <script src="js/intro.js" type="text/javascript"></script>
   </body>
 </html>
