--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,24 @@
 <html>
   <head>
     <title>Boilerplate</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/bulma.min.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
-    
+    <section class="hero">     
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title">
+            Welcome
+          </h1>
+          <h2 class="subtitle">
+            to the generic app boilerplate
+          </h2>
+        </div>
+      </div>
+    </section>
 
     <script src="js/script.js" type="text/javascript"></script>
   </body>
