--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    <section class="hero">     
+    <section class="hero is-fullheight">     
       <div class="hero-body">
-        <div class="container">
+        <div class="container has-text-centered">
           <h1 class="title">
             Welcome
           </h1>
@@ -21,6 +21,6 @@
       </div>
     </section>
 
-    <script src="js/intro.js" type="text/javascript"></script>
+    <script src="js/welcome.js" type="text/javascript"></script>
   </body>
 </html>
