--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>Boilerplate</title>
-    <link rel="stylesheet" href="css/bulma.min.css" type="text/css">
+    <link rel="stylesheet" href="css/style.min.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
-    <section class="hero">     
+    <section class="hero is-fullheight">     
       <div class="hero-body">
-        <div class="container">
+        <div class="container has-text-centered">
           <h1 class="title">
             Welcome
           </h1>
@@ -21,6 +21,6 @@
       </div>
     </section>
 
-    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/script.min.js" type="text/javascript"></script>
   </body>
 </html>
