--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,12 @@
       </div>
     </section>
 
+    <!-- modules -->
+    <script src="../node_modules/underscore/underscore-min.js" type="text/javascript"></script>
+    <script src="../node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="../node_modules/backbone/backbone-min.js" type="text/javascript"></script>
+    <!-- end modules -->
+    
     <script src="js/welcome.js" type="text/javascript"></script>
   </body>
 </html>
