--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,11 @@
     <script src="../node_modules/underscore/underscore-min.js" type="text/javascript"></script>
     <script src="../node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="../node_modules/backbone/backbone-min.js" type="text/javascript"></script>
+    <script src="../node_modules/backbone.stickit/backbone.stickit.js" type="text/javascript"></script>
     <!-- end modules -->
     
+    <!-- user javascript files -->
     <script src="js/welcome.js" type="text/javascript"></script>
+    <!-- end user javscript files -->
   </body>
 </html>
