--- a/app/index.html
+++ b/app/index.html
@@ -7,19 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
-  <body>
-    <section class="hero is-fullheight">     
-      <div class="hero-body">
-        <div class="container has-text-centered">
-          <h1 class="title">
-            Welcome
-          </h1>
-          <h2 class="subtitle">
-            to the generic app boilerplate
-          </h2>
+  <body id="app"> 
+
+    <!-- templates -->
+    <script type="text/template" id="TestTemplate">
+      <section class="hero is-fullheight">     
+        <div class="hero-body">
+          <div class="container has-text-centered">
+            <h1 class="title">
+              <%= title %> 
+            </h1>
+            <h2 class="subtitle">
+              <%= message %> 
+            </h2>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </script>
+    <!-- end templates -->
 
     <!-- modules -->
     <script src="../node_modules/underscore/underscore-min.js" type="text/javascript"></script>
@@ -29,7 +34,10 @@
     <!-- end modules -->
     
     <!-- user javascript files -->
+    <script src="js/models/TestModel.js" type="text/javascript"></script>
+    <script src="js/views/TestView.js" type="text/javascript"></script>
     <script src="js/welcome.js" type="text/javascript"></script>
-    <!-- end user javscript files -->
+    <!-- end user javascript files -->
+
   </body>
 </html>
