--- a/app/index.html
+++ b/app/index.html
@@ -8,36 +8,22 @@
   </head>
 
   <body id="app"> 
-
-    <!-- templates -->
-    <script type="text/template" id="TestTemplate">
-      <section class="hero is-fullheight">     
-        <div class="hero-body">
-          <div class="container has-text-centered">
-            <h1 class="title">
-              <%= title %> 
-            </h1>
-            <h2 class="subtitle">
-              <%= message %> 
-            </h2>
-          </div>
-        </div>
-      </section>
-    </script>
-    <!-- end templates -->
-
     <!-- modules -->
     <script src="../node_modules/underscore/underscore-min.js" type="text/javascript"></script>
     <script src="../node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="../node_modules/ejs/ejs.min.js" type="text/javascript"></script>
     <script src="../node_modules/backbone/backbone-min.js" type="text/javascript"></script>
     <script src="../node_modules/backbone.stickit/backbone.stickit.js" type="text/javascript"></script>
     <!-- end modules -->
     
+    <!-- user template files -->
+    <script src="templates/TestTemplate.js" type="text/javascript"></script>
+    <!-- end user template files -->
+
     <!-- user javascript files -->
     <script src="js/models/TestModel.js" type="text/javascript"></script>
     <script src="js/views/TestView.js" type="text/javascript"></script>
     <script src="js/welcome.js" type="text/javascript"></script>
     <!-- end user javascript files -->
-
   </body>
 </html>
